# zoekt-mcp

./: CLAUDE.md  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
module/: default.nix  default.nix.test
src/: main.rs  mcp.rs
src/daemon/: config.rs  github.rs  mod.rs
