[package]
name = "zoekt-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server wrapping Zoekt code search for Claude Code"

[[bin]]
name = "zoekt-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
