[package]
name = "zoekt-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
description = "MCP server wrapping Zoekt trigram-indexed code search for Claude Code"
repository = "https://github.com/pleme-io/zoekt-mcp"
homepage = "https://github.com/pleme-io/zoekt-mcp"
keywords = ["mcp", "zoekt", "code-search", "claude", "trigram"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.nix", "flake.lock"]

[[bin]]
name = "zoekt-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
